--- a/base.html
+++ b/base.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <style>
         body {
             background-color: lightblue;
@@ -31,7 +30,7 @@
     <p>
         ngày xửa ngày xưa trong một khu rưng nọ có cô gái quàng khăn đỏ.
     </p>
-    <span class="iconify" data-icon="bx:bxs-user" style="color: gray;" data-width="100" data-height="100"></span>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="100" height="100" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2S7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z" fill="gray"/></svg>
 </body>
 
 </html>
