--- a/base.html
+++ b/base.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            background-color: whitesmoke;
+            background-color: white;
             color: teal;
         }
 
@@ -28,31 +28,34 @@
             margin-top: 24px;
         }
 
-        p.h1 {
+        h1 {
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 18px;
-            line-height: 20px;
+            font-size: 20px;
+            line-height: 30px;
             padding: 0px 8px;
-            background-color: whitesmoke;
+            background-color: white;
+            margin: 0px;
         }
 
-        p.h2 {
+        h2 {
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 13px;
-            line-height: 15px;
+            font-size: 16px;
+            line-height: 26px;
             padding: 0px 8px;
-            background-color: whitesmoke;
+            background-color: white;
+            margin: 0px;
         }
 
-        p.h3 {
+        h3 {
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 10px;
-            line-height: 12px;
+            font-size: 12px;
+            line-height: 22px;
             padding: 0px 8px;
-            background-color: whitesmoke;
+            background-color: white;
+            margin: 0px;
         }
 
         div.icon {
@@ -63,12 +66,15 @@
     </style>
 </head>
 
-<body style="background-color: whitesmoke;">
+<body>
     <div style="flex-direction: row; align-items: flex-start;">
 
         <div style="
-        width: 245px;
-        padding: 24px 12px 36px 8px;">
+        width: 40%;
+        padding: 24px 12px 36px 8px;
+        border: 0px solid teal;
+        border-right-width: 1px;
+        ">
             <div style=" width: 100px;height: 100px;
             background-color: gray;border-radius: 50px;
             justify-content: center;overflow: hidden;">
@@ -80,16 +86,10 @@
             </div>
 
             <div class="line""></div>
-            <p class=" h1" style=" margin-top: -12px; ">
-                NGUYỄN VĂN A
-                </p>
-                <p class="h3" style="margin-top: 0px; ">
-                    NHÀN VIÊN KINH DOANH
-                </p>
+            <h1  style=" margin-top: -15px; ">NGUYỄN VĂN A</h1>
+                <h3>NHâN VIÊN KINH DOANH</h3>
             </div>
-            <div style="height: 792px;width: 1px; background-color: teal;"></div>
-
-            <div style="width: 367px; padding: 24px 8px 36px 12px;">
+            <div style=" width: 60%; padding: 24px 8px 36px 12px;">
                 <div class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         aria-hidden="true" role="img" width="16" height="16" preserveAspectRatio="xMidYMid meet"
@@ -102,7 +102,7 @@
                 </div>
                 <div class="line"">
 
-                </div><p class=" h2" style="margin-top: -9px;">MỤC TIÊU</p>
+                </div><h2  style=" margin-top: -13px;">MỤC TIÊU</h2>
                 </div>
 </body>
 
