--- a/base.html
+++ b/base.html
@@ -4,71 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=0">
     <title>TapCode App</title>
 
     <style>
-        body {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            background-color: white;
-            color: teal;
-        }
+    body {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background-color: white;
+        color: teal;
+    }
 
-        div {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-        }
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
 
-        div.line {
-            height: 1px;
-            width: 100%;
-            background-color: teal;
-            margin-top: 24px;
-        }
+    h1 {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 30px;
+        padding: 0px 8px;
+        background-color: white;
+        margin: 0px;
+    }
 
-        h1 {
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 20px;
-            line-height: 30px;
-            padding: 0px 8px;
-            background-color: white;
-            margin: 0px;
-        }
+    h2 {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 26px;
+        padding: 0px 8px;
+        background-color: white;
+        margin: 0px;
+    }
 
-        h2 {
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 16px;
-            line-height: 26px;
-            padding: 0px 8px;
-            background-color: white;
-            margin: 0px;
-        }
+    h3 {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 22px;
+        padding: 0px 8px;
+        background-color: white;
+        margin: 0px;
+    }
 
-        h3 {
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 12px;
-            line-height: 22px;
-            padding: 0px 8px;
-            background-color: white;
-            margin: 0px;
-        }
+    div.icon {
+        padding: 8px;
+        border-radius: 50px;
+        background-color: teal;
+    }
 
-        div.icon {
-            padding: 8px;
-            border-radius: 50px;
-            background-color: teal;
-        }
+    hr {
+        border-top: 1px solid teal;
+    }
+
     </style>
 </head>
 
 <body>
     <div style="flex-direction: row; align-items: flex-start;">
-
         <div style="
         width: 40%;
         padding: 24px 12px 36px 8px;
@@ -78,32 +75,21 @@
             <div style=" width: 100px;height: 100px;
             background-color: gray;border-radius: 50px;
             justify-content: center;overflow: hidden;">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
-                    role="img" width="80" height="80" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                    <path
-                        d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2S7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z"
-                        fill="lightgray" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="80" height="80" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                    <path d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2S7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z" fill="lightgray" /></svg>
             </div>
-
-            <div class="line""></div>
+            <hr>
             <h1  style=" margin-top: -15px; ">NGUYỄN VĂN A</h1>
-                <h3>NHâN VIÊN KINH DOANH</h3>
+            <h3>NHâN VIÊN KINH DOANH</h3>
+        </div>
+        <div style=" width: 60%; padding: 24px 8px 36px 12px;">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="16" height="16" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
+                    <path d="M16 7h-1.577A6.516 6.516 0 0 0 9 1.577V0H7v1.577A6.516 6.516 0 0 0 1.577 7H0v2h1.577A6.516 6.516 0 0 0 7 14.423V16h2v-1.577A6.516 6.516 0 0 0 14.423 9H16V7zm-3.612 0h-1.559A3.008 3.008 0 0 0 9 5.171V3.612A4.516 4.516 0 0 1 12.388 7zM8 9a1 1 0 1 1 0-2a1 1 0 0 1 0 2zM7 3.612v1.559A3.008 3.008 0 0 0 5.171 7H3.612A4.516 4.516 0 0 1 7 3.612zM3.612 9h1.559A3.008 3.008 0 0 0 7 10.829v1.559A4.516 4.516 0 0 1 3.612 9zM9 12.388v-1.559A3.008 3.008 0 0 0 10.829 9h1.559A4.516 4.516 0 0 1 9 12.388z" fill="white" /></svg>
             </div>
-            <div style=" width: 60%; padding: 24px 8px 36px 12px;">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        aria-hidden="true" role="img" width="16" height="16" preserveAspectRatio="xMidYMid meet"
-                        viewBox="0 0 16 16">
-                        <g fill="white">
-                            <path
-                                d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z" />
-                        </g>
-                    </svg>
-                </div>
-                <div class="line"">
-
-                </div><h2  style=" margin-top: -13px;">MỤC TIÊU</h2>
-                </div>
+            <hr>
+            <h2  style=" margin-top: -13px;">MỤC TIÊU</h2>
+        </div>
 </body>
 
 </html>
