--- a/base.html
+++ b/base.html
@@ -9,7 +9,7 @@
 
     <style>
     body {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         background-color: white;
         color: teal;
     }
@@ -24,6 +24,16 @@
     h1 {
         text-transform: uppercase;
         font-weight: bold;
+        font-size: 24px;
+        line-height: 34px;
+        padding: 0px 8px;
+        background-color: white;
+        margin: 0px;
+    }
+
+    h2 {
+        text-transform: uppercase;
+        font-weight: bold;
         font-size: 20px;
         line-height: 30px;
         padding: 0px 8px;
@@ -31,7 +41,7 @@
         margin: 0px;
     }
 
-    h2 {
+    h3 {
         text-transform: uppercase;
         font-weight: bold;
         font-size: 16px;
@@ -41,13 +51,8 @@
         margin: 0px;
     }
 
-    h3 {
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 12px;
-        line-height: 22px;
+    span {
         padding: 0px 8px;
-        background-color: white;
         margin: 0px;
     }
 
@@ -58,7 +63,35 @@
     }
 
     hr {
+        width: 100%;
+        margin: 0px;
+        margin-top: 24px;
         border-top: 1px solid teal;
+    }
+
+    ul {
+        margin: 0px;
+        padding: 0px;
+        list-style-type: none;
+        align-self: flex-start;
+    }
+
+    ul li {
+        display: flex;
+        font-size: 16px;
+        line-height: 26px;
+    }
+
+    ul li span:nth-child(1):first-letter {
+        text-transform: uppercase;
+    }
+
+    ul.profile li span:nth-child(1) {
+        font-weight: bold;
+    }
+
+    ul.profile.myself li span:nth-child(1) {
+        width: 80px;
     }
 
     </style>
@@ -81,14 +114,99 @@
             <hr>
             <h1  style=" margin-top: -15px; ">NGUYỄN VĂN A</h1>
             <h3>NHâN VIÊN KINH DOANH</h3>
+            <div class="icon" style="margin-top: 24px;">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                    <g fill="none">
+                        <path d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 1 1-18 0a9 9 0 0 1 18 0z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
+                </svg>
+            </div>
+            <hr>
+            <h2 style=" margin-top: -13px;">thông tin</h2>
+            <ul class="profile myself" style=" margin-top: 12px;">
+                <li>
+                    <span>giới tính</span>
+                    <span>nữ</span>
+                </li>
+                <li>
+                    <span>Ngày sinh</span>
+                    <span>08-11-1996</span>
+                </li>
+                <li>
+                    <span>Email</span>
+                    <span>abc@email.com</span>
+                </li>
+                <li>
+                    <span>Điện thoại</span>
+                    <span>0954322543</span>
+                </li>
+                <li>
+                    <span>Địa chi</span>
+                    <span>44 Hoàng Van Thu, khu pho 2, phuong Binh Tri Thien, Quan 4, Thanh pho Ho Chi Minh</span>
+                </li>
+            </ul>
+            <div class="icon" style="margin-top: 24px;">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
+                    <g fill="white">
+                        <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59c-.125.36-.479 1.013-1.04 1.639c-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545c1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484c.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464c.201-.263.38-.578.488-.901c.11-.33.172-.762.004-1.149c.069-.13.12-.269.159-.403c.077-.27.113-.568.113-.857c0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362a1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272c-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05a9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164c-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868c-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65c1.095-.3 1.977-.996 2.614-1.708c.635-.71 1.064-1.475 1.238-1.978c.243-.7.407-1.768.482-2.85c.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725a.5.5 0 0 0 .595.644l.003-.001l.014-.003l.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164c.175.058.45.3.57.65c.107.308.087.67-.266 1.022l-.353.353l.353.354c.043.043.105.141.154.315c.048.167.075.37.075.581c0 .212-.027.414-.075.582c-.05.174-.111.272-.154.315l-.353.353l.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353l.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z" />
+                    </g>
+                </svg>
+            </div>
+            <hr>
+            <h2 style=" margin-top: -13px;">KỸ NĂNG</h2>
+            <ul style=" margin-top: 12px;">
+                <li><span>làm việc nhóm.</span></li>
+                <li><span>học hiệu quả.</span></li>
+            </ul>
+            <div class="icon" style="margin-top: 24px;">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 48 48">
+                    <path d="M15 8C8.925 8 4 12.925 4 19c0 11 13 21 20 23.326C31 40 44 30 44 19c0-6.075-4.925-11-11-11c-3.72 0-7.01 1.847-9 4.674A10.987 10.987 0 0 0 15 8z" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" fill="none" /></svg>
+            </div>
+            <hr>
+            <h2 style=" margin-top: -13px;">sở THÍCH</h2>
+            <ul style=" margin-top: 12px;">
+                <li><span>Du lịch, chụp ánh.</span></li>
+            </ul>
+            <div class="icon" style="margin-top: 24px;">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32">
+                    <path d="M11 24h4v2h-4z" fill="white" />
+                    <path d="M5 24h4v2H5z" fill="white" />
+                    <path d="M23 24h4v2h-4z" fill="white" />
+                    <path d="M17 24h4v2h-4z" fill="white" />
+                    <path d="M9 22a4.92 4.92 0 0 1 4-2h6a5.22 5.22 0 0 1 4 2h2.3a6.87 6.87 0 0 0-6.3-4h-6a6.87 6.87 0 0 0-6.3 4z" fill="white" />
+                    <path d="M24 28h2v2h-2z" fill="white" />
+                    <path d="M6 28h2v2H6z" fill="white" />
+                    <path d="M16 16a7 7 0 1 1 7-7a7 7 0 0 1-7 7zm0-12a5 5 0 0 0-5 5a5 5 0 0 0 10 0a5 5 0 0 0-5-5z" fill="white" /></svg>
+            </div>
+            <hr>
+            <h2 style=" margin-top: -13px;">NGƯỜI THAM KHẢO</h2>
+            <h3 style="align-self: flex-start;margin-top: 12px;">NGUYÊN VĂN B</h3>
+            <ul class="profile" style=" margin-top: 8px;">
+                <li>
+                    <span>Công ty</span>:
+                    <span>Công ty CP ABC</span>
+                </li>
+                <li>
+                    <span>chức vụ</span>:
+                    <span>Phó giám đốc</span>
+                </li>
+                <li>
+                    <span>Email</span>:
+                    <span>nguyenvanb@gmail.com</span>
+                </li>
+                <li>
+                    <span>Điện thoại</span>:
+                    <span>092243565766</span>
+                </li>
+            </ul>
         </div>
         <div style=" width: 60%; padding: 24px 8px 36px 12px;">
             <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="16" height="16" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
                     <path d="M16 7h-1.577A6.516 6.516 0 0 0 9 1.577V0H7v1.577A6.516 6.516 0 0 0 1.577 7H0v2h1.577A6.516 6.516 0 0 0 7 14.423V16h2v-1.577A6.516 6.516 0 0 0 14.423 9H16V7zm-3.612 0h-1.559A3.008 3.008 0 0 0 9 5.171V3.612A4.516 4.516 0 0 1 12.388 7zM8 9a1 1 0 1 1 0-2a1 1 0 0 1 0 2zM7 3.612v1.559A3.008 3.008 0 0 0 5.171 7H3.612A4.516 4.516 0 0 1 7 3.612zM3.612 9h1.559A3.008 3.008 0 0 0 7 10.829v1.559A4.516 4.516 0 0 1 3.612 9zM9 12.388v-1.559A3.008 3.008 0 0 0 10.829 9h1.559A4.516 4.516 0 0 1 9 12.388z" fill="white" /></svg>
             </div>
             <hr>
-            <h2  style=" margin-top: -13px;">MỤC TIÊU</h2>
+            <h2 style=" margin-top: -13px;">MỤC TIÊU</h2>
         </div>
 </body>
 
