--- a/base.html
+++ b/base.html
@@ -12,6 +12,8 @@
         font-family: Arial, Helvetica, sans-serif;
         background-color: white;
         color: teal;
+        margin: 0px;
+        padding: 0px;
     }
 
     div {
@@ -24,8 +26,8 @@
     h1 {
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 24px;
-        line-height: 34px;
+        font-size: 18px;
+        line-height: 28px;
         padding: 0px 8px;
         background-color: white;
         margin: 0px;
@@ -34,8 +36,8 @@
     h2 {
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 13px;
+        line-height: 23px;
         padding: 0px 8px;
         background-color: white;
         margin: 0px;
@@ -44,8 +46,8 @@
     h3 {
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 16px;
-        line-height: 26px;
+        font-size: 10px;
+        line-height: 20px;
         padding: 0px 8px;
         background-color: white;
         margin: 0px;
@@ -78,8 +80,8 @@
 
     ul li {
         display: flex;
-        font-size: 16px;
-        line-height: 26px;
+        font-size: 10px;
+        line-height: 20px;
     }
 
     ul li span:nth-child(1):first-letter {
