fix a little bit

--- a/base.html
+++ b/base.html
@@ -59,6 +59,7 @@
         padding: 0px 8px;
         background-color: white;
         margin: 0px;
+        align-self: flex-start;
     }
 
     span {
@@ -124,7 +125,7 @@
     }
 
     .margin-base {
-        margin-top:3px;
+        margin-top: 3px;
     }
 
     .margin-padding {
@@ -152,7 +153,7 @@
             </div>
                 <hr>
                 <h1  class="title">NGUYỄN VĂN A</h1>
-                <h3>NHâN VIÊN KINH DOANH</h3>
+                <h3 style="align-self: center;">NHâN VIÊN KINH DOANH</h3>
                 <div class="icon margin-padding">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                         <g fill="none">
@@ -219,7 +220,7 @@
                 </div>
                 <hr>
                 <h2 class="title">NGƯỜI THAM KHẢO</h2>
-                <h3 class="margin-base" style="align-self: flex-start;">NGUYÊN VĂN B</h3>
+                <h3 class="margin-base">NGUYÊN VĂN B</h3>
                 <ul class="profile margin-base">
                     <li>
                         <span>Công ty</span>:
@@ -257,7 +258,7 @@
                 </div>
                 <hr>
                 <h2 class="title">kinh nghiệm</h2>
-                <h3 class="margin-base" style="align-self: flex-start;">03-2015 - 02-2016 : TEAM LEAD</h3>
+                <h3 class="margin-base">03-2015 - 02-2016 : TEAM LEAD</h3>
                 <ul class="profile margin-base">
                     <li>
                         <span>Công ty</span>:
@@ -281,7 +282,7 @@
                 </div>
                 <hr>
                 <h2 class="title">học vấn</h2>
-                <h3 class="margin-base" style="align-self: flex-start;">07-2011 - 01 -2015 : HỌC VIỆN TÀI CHÍNH</h3>
+                <h3 class="margin-base">07-2011 - 01 -2015 : HỌC VIỆN TÀI CHÍNH</h3>
                 <ul class="profile margin-base">
                     <li>
                         <span>chuyên ngành</span>:
@@ -303,29 +304,33 @@
                 </div>
                 <hr>
                 <h2 class="title">ngoại ngữ</h2>
-                <h3 class="margin-base" style="align-self: flex-start;">tiếng anh</h3>
+                <h3 class="margin-base" >tiếng anh</h3>
                 <ul class="profile language margin-base">
                     <li>
                         <span>nghe</span>
                         <div class="bar-border">
                             <div class="bar-score" style="width: 80%;"></div>
+                        </div>
                     </li>
                     <li>
                         <span>nói</span>
                         <div class="bar-border">
                             <div class="bar-score" style="width: 90%;"></div>
+                        </div>
 
                     </li>
                     <li>
                         <span>đọc</span>
                         <div class="bar-border">
                             <div class="bar-score" style="width: 100%;"></div>
+                        </div>
 
                     </li>
                     <li>
                         <span>viết</span>
                         <div class="bar-border">
                             <div class="bar-score" style="width: 69%;"></div>
+                        </div>
                     </li>
                 </ul>
 
