--- a/modern/vi/broccoli.html
+++ b/modern/vi/broccoli.html
@@ -150,7 +150,7 @@
         ">
             <div class="icon" style="margin-bottom: 8px;">
                 <img style="border-radius: 100px;border: 1px solid white;" 
-                src="https://res.cloudinary.com/good-assistant/image/upload/v1625845045/avatar/r9ykvittktjz2gsluku8.jpg" 
+                src="{avatar_image}" 
                 alt="Avatar" width="100" height="100">
             </div>
                 <hr>
